modified data-exploration notebook

--- a/data-exploration.ipynb
+++ b/data-exploration.ipynb
@@ -15,7 +15,8 @@
     "\n",
     "---\n",
     "\n",
-    "[valentine-poster.png]()\n",
+    "![valentine-poster.png](https://github.com/AUPP-Data-Science-Club/week2-numpy-pandas-and-data-exploration/blob/main/valentine-poster.png?raw=True)\n",
+    "\n",
     "\n",
     "---"
    ]
@@ -220,6 +221,28 @@
     "data = pd.read_csv(path + \"/valentine_gifts_satisfaction.csv\")\n",
     "\n",
     "data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5def113",
+   "metadata": {},
+   "source": [
+    "### Data Explanation\n",
+    "\n",
+    "| Column | Type | Description |\n",
+    "|--------|------|-------------|\n",
+    "| `id` | Integer | Unique identifier (1-670) |\n",
+    "| `receiver_gender` | String | Gender of gift receiver (Female, Male, Non-binary) |\n",
+    "| `receiver_age` | Integer | Age of receiver (18-60 years) |\n",
+    "| `relationship_type` | String | Type of relationship (Dating, Married, First Date, Engaged, Complicated) |\n",
+    "| `months_together` | Integer | Duration of relationship in months (0-357) |\n",
+    "| `gift_item` | String | Specific gift given (18 different items) |\n",
+    "| `gift_category` | String | Category of gift (Sweets, Jewelry, Luxury, Collectibles, Gaming, Sentimental) |\n",
+    "| `price` | Float | Price of gift in USD ($5-$500) |\n",
+    "| `flower_count` | Integer | Number of flowers included (0, 1, 3, 6, 12, 24, 50, 67) |\n",
+    "| `days_prepared` | Integer | Days spent preparing the gift (0-200) |\n",
+    "| `receiver_satisfaction` | Integer | Satisfaction rating (1-5 scale, 1=very unhappy, 5=very happy) |"
    ]
   },
   {
