--- a/pandas-basics.ipynb
+++ b/pandas-basics.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# 🐼 **AUPP Data Science Club**\n",
     "\n",
-    "## **Workshop 1: NumPy, Pandas, and Data Exploration**\n",
+    "## **Week 2: NumPy, Pandas, and Data Exploration**\n",
     "\n",
     "## Pandas Basics\n",
     "\n",
