--- a/data-exploration.ipynb
+++ b/data-exploration.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# 🐼 **AUPP Data Science Club**\n",
     "\n",
-    "## **Workshop 1: NumPy, Pandas, and Data Exploration**\n",
+    "## **Week 2: NumPy, Pandas, and Data Exploration**\n",
     "\n",
     "## Data Exploration\n",
     "\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "70b7c147",
    "metadata": {},
    "outputs": [],
@@ -509,7 +509,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -523,7 +523,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
